Update packing.gradle